# abridge

./: .dockerignore  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-tests  Dockerfile  Makefile  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini
abridge/: __init__.py  cli.py  processor.py
poshsplice/: __init__.py  cli.py  processor.py  ui.py
tests/: test__init__.py  test_cli.py  test_processor.py  test_ui.py
